--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <body>
 
         <div class="toggleBox">
-            <link rel="stylesheet" href="what.css">
+            <link rel="stylesheet" href="style.css">
 
             <h1><span>Toogle Switch</span></h1>
             <div class="toggle">
